--- a/index.html
+++ b/index.html
@@ -1,15 +1,79 @@
----
-title: about
-description: About Mihai Dobri.
-stylesheet: true
-sitemap:
-changefreq: monthly
-priority: 1.0
----
+<!DOCTYPE html>
 
-<div id="about">
+<html>
+	<head>
+		<title>
+			about | Mihai Dobri
+		</title>
+
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<meta name="description" content="About Mihai Dobri.">
+		<meta name="viewport" content="initial-scale=1">
+
+		<style>
+			div#header li#about a {
+				color: #ff4040;
+				font-weight: bold;
+			}
+		</style>
+
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet" type="text/css">
+
+		<!-- Page-specific stylesheets.  -->
+		
+			<link rel="stylesheet" type="text/css" href="/css/about.css">
+		
+		
+			<link rel="stylesheet" type="text/css" href="/css/header.css">
+		
+		
+
+		<!-- MathJax configuration. -->
+		
+
+		
+
+		<!-- Bill. -->
+		<script>
+			console.log("_   /|\n\\'o.O'\n=(___)=\n   U\n\nHey there.");
+		</script>
+
+		<!-- Google Analytics. -->
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+			ga('create', 'UA-117321493-1', 'auto');
+			ga('send', 'pageview');
+		</script>
+	</head>
+	<body>
+		<!--[if lt IE 7]>
+			<p>
+				You are using an <strong>outdated</strong> browser. Please
+				<a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
+			</p>
+		<![endif]-->
+
+		<div id="main">
+			
+				<div id="header">
+	<h2 id="maintitle">M.D.</h2>
+	<ul>
+		<li id="about"><a href="/">about</a></li>
+		<li id="projects"><a href="/projects">projects</a></li>
+		<li id="blog"><a href="/blog">blog</a></li>		
+		<li id="cv"><a href="/cv/CV.pdf">cv</a></li>
+		<li id="contact"><a href="mailto:dobrimihai@yahoo.com">contact</a></li>
+	</ul>
+</div>
+
+			
+			<div id="about">
 	<div id="left">
-		<img src="" alt="George Mihaila's photo">
+		<img src="https://pbs.twimg.com/profile_images/929294637336014848/KVSZEVgs_400x400.jpg" alt="Mihai Dobri's photo">
 	</div
 	><div id="middle">
 	</div
@@ -17,29 +81,34 @@ priority: 1.0
 		<h2>Welcome</h2>
 
     <p>
-      I'm George Mihaila.
+      I'm Mihai Dobri.
 		</p>
 
 		<p>
-            Love Machine Learning
+			I am a QA Automation engineer and I have more than 3 years of experience in software testing, working for companies like IBM, Deloitte and currently for ING.
 		</p>
+		
+		<p>
+			My particular areas of expertise include software testing, machine learning and AI.
+		</p>
+		
 
 		<p>
-            AI
-		</p>
-
-
-		<p>
-
+		
 		</p>
 
     <p>
-
+          
     </p>
 
 		<div id="links">
-			<div><a id="github" href="https://github.com/gmihaila"></a></div>
-			<div><a id="linkedin" href="http://www.linkedin.com//"></a></div>
+			<div><a id="github" href="https://github.com/mihaidobri"></a></div>
+			<div><a id="linkedin" href="http://www.linkedin.com/in/mihaidobri"></a></div>
 		</div>
 	</div>
 </div>
+
+		</div>
+
+	</body>
+</html>
