--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <html>
 	<head>
 		<title>
-			about | Mihai Dobri
+			about | George Mihaila
 		</title>
 
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<meta name="description" content="About Mihai Dobri.">
+		<meta name="description" content="About George Mihaila.">
 		<meta name="viewport" content="initial-scale=1">
 
 		<style>
@@ -21,18 +21,18 @@
 		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet" type="text/css">
 
 		<!-- Page-specific stylesheets.  -->
-		
+
 			<link rel="stylesheet" type="text/css" href="/css/about.css">
-		
-		
+
+
 			<link rel="stylesheet" type="text/css" href="/css/header.css">
-		
-		
+
+
 
 		<!-- MathJax configuration. -->
-		
 
-		
+
+
 
 		<!-- Bill. -->
 		<script>
@@ -58,19 +58,19 @@
 		<![endif]-->
 
 		<div id="main">
-			
+
 				<div id="header">
 	<h2 id="maintitle">M.D.</h2>
 	<ul>
 		<li id="about"><a href="/">about</a></li>
 		<li id="projects"><a href="/projects">projects</a></li>
-		<li id="blog"><a href="/blog">blog</a></li>		
+		<li id="blog"><a href="/blog">blog</a></li>
 		<li id="cv"><a href="/cv/CV.pdf">cv</a></li>
 		<li id="contact"><a href="mailto:dobrimihai@yahoo.com">contact</a></li>
 	</ul>
 </div>
 
-			
+
 			<div id="about">
 	<div id="left">
 		<img src="https://pbs.twimg.com/profile_images/929294637336014848/KVSZEVgs_400x400.jpg" alt="Mihai Dobri's photo">
@@ -85,25 +85,25 @@
 		</p>
 
 		<p>
-			I am a QA Automation engineer and I have more than 3 years of experience in software testing, working for companies like IBM, Deloitte and currently for ING.
+            I love AI and ML
 		</p>
-		
-		<p>
-			My particular areas of expertise include software testing, machine learning and AI.
-		</p>
-		
 
 		<p>
-		
+            Some Updates
+		</p>
+
+
+		<p>
+
 		</p>
 
     <p>
-          
+
     </p>
 
 		<div id="links">
-			<div><a id="github" href="https://github.com/mihaidobri"></a></div>
-			<div><a id="linkedin" href="http://www.linkedin.com/in/mihaidobri"></a></div>
+			<div><a id="github" href="https://github.com/gmihaila"></a></div>
+			<div><a id="linkedin" href="http://www.linkedin.com/in/georgemihaila"></a></div>
 		</div>
 	</div>
 </div>
