--- a/index.html
+++ b/index.html
@@ -60,28 +60,28 @@
 		<div id="main">
 
 				<div id="header">
-	<h2 id="maintitle">M.D.</h2>
+	<h2 id="maintitle">GeorgeM</h2>
 	<ul>
 		<li id="about"><a href="/">about</a></li>
 		<li id="projects"><a href="/projects">projects</a></li>
 		<li id="blog"><a href="/blog">blog</a></li>
 		<li id="cv"><a href="/cv/CV.pdf">cv</a></li>
-		<li id="contact"><a href="mailto:dobrimihai@yahoo.com">contact</a></li>
+		<li id="contact"><a href="mailto:georgemihaila20@yahoo.com">contact</a></li>
 	</ul>
 </div>
 
 
 			<div id="about">
 	<div id="left">
-		<img src="https://pbs.twimg.com/profile_images/929294637336014848/KVSZEVgs_400x400.jpg" alt="Mihai Dobri's photo">
+		<img src="" alt="George Mihaila's photo">
 	</div
 	><div id="middle">
 	</div
 	><div id="right">
 		<h2>Welcome</h2>
 
-    <p>
-      I'm Mihai Dobri.
+        <p>
+            Some text
 		</p>
 
 		<p>
