--- a/projects/index.html
+++ b/projects/index.html
@@ -3,11 +3,11 @@
 <html>
 	<head>
 		<title>
-			projects | Mihai Dobri
+			projects | George Mihaila
 		</title>
 
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<meta name="description" content="Mihai Dobri's projects">
+		<meta name="description" content="George Mihaila's projects">
 		<meta name="viewport" content="initial-scale=1">
 
 		<style>
@@ -21,18 +21,18 @@
 		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet" type="text/css">
 
 		<!-- Page-specific stylesheets.  -->
-		
+
 			<link rel="stylesheet" type="text/css" href="/css/projects.css">
-		
-		
+
+
 			<link rel="stylesheet" type="text/css" href="/css/header.css">
-		
-		
+
+
 
 		<!-- MathJax configuration. -->
-		
 
-		
+
+
 
 		<!-- Bill. -->
 		<script>
@@ -58,21 +58,21 @@
 		<![endif]-->
 
 		<div id="main">
-			
+
 				<div id="header">
 	<h2 id="maintitle">M.D.</h2>
 	<ul>
 		<li id="about"><a href="/">about</a></li>
 		<li id="projects"><a href="/projects">projects</a></li>
-		<li id="blog"><a href="/blog">blog</a></li>		
+		<li id="blog"><a href="/blog">blog</a></li>
 		<li id="cv"><a href="/cv/CV.pdf">cv</a></li>
-		<li id="contact"><a href="mailto:dobrimihai@yahoo.com">contact</a></li>
+		<li id="contact"><a href="mailto:georgemihaila20@yahoo.com">contact</a></li>
 	</ul>
 </div>
 
-			
+
 			<div id="projects">
-	
+
 		<div class="project">
 			<h1>Personal website</h1>
 			<span class="separator">|</span>
@@ -83,14 +83,14 @@
 			</div>
 			<div class="description"><p>You are here! Thank you for checking my project page</p>
 </div>
-			
+
 				<div class="links"
-					
+
 						id="links_3"
 					>
-					
+
 						<div class="website">
-							<a href="http://www.mihaidobri.com">view online</a>
+							<a href="http://www.georgemihaila.com">view online</a>
 						</div
 					><div class="github">
 						<a href="https://github.com/mihaidobri/mihaidobri.github.io">view on GitHub</a>
@@ -99,9 +99,9 @@
 						<a href="https://github.com/mihaidobri/mihaidobri.github.io/archive/master.zip">download zip</a>
 					</div>
 				</div>
-			
+
 		</div>
-	
+
 </div>
 
 		</div>
