--- a/index.html
+++ b/index.html
@@ -78,30 +78,40 @@
 	><div id="middle">
 	</div
 	><div id="right">
-		<h2>Welcome</h2>
+		<h2>George Mihaila</h2>
 
         <p>
-            Some text
-		</p>
-
-		<p>
-            I love AI and ML
-		</p>
-
-		<p>
-            Some Updates
+            Machine Learning - AI Practitioner
+        </p>
+        <p>
+            PhD. Computer Science at University of North Texas
 		</p>
 
 
 		<p>
-            More updates
+            Latest Activity:
 		</p>
 
-    <p>
 
-    </p>
+		<p>
+            Latest Project:
+		</p>
+
+
+		<p>
+            Current book reading:
+		</p>
+
+        <p>
+
+        </p>
+
+        <p>
+
+        </p>
 
 		<div id="links">
+			<div><a id="medium" href="https://medium.com"></a></div>
 			<div><a id="github" href="https://github.com/gmihaila"></a></div>
 			<div><a id="linkedin" href="http://www.linkedin.com/in/georgemihaila"></a></div>
 		</div>
