--- a/projects/index.html
+++ b/projects/index.html
@@ -60,7 +60,7 @@
 		<div id="main">
 
 				<div id="header">
-	<h2 id="maintitle">M.D.</h2>
+	<h2 id="maintitle">George Mihaila</h2>
 	<ul>
 		<li id="about"><a href="/">about</a></li>
 		<li id="projects"><a href="/projects">projects</a></li>
@@ -68,43 +68,56 @@
 		<li id="cv"><a href="/cv/CV.pdf">cv</a></li>
 		<li id="contact"><a href="mailto:georgemihaila20@yahoo.com">contact</a></li>
 	</ul>
-</div>
+    </div>
 
 
-			<div id="projects">
+	<div id="projects">
+
 
 		<div class="project">
-			<h1>Personal website</h1>
+			<h1>
+                Project Title
+            </h1>
+
 			<span class="separator">|</span>
-			<span>personal website / portfolio / blog</span>
+
+            <span>
+                Project short description
+            </span>
+
 			<div class="meta">
-				<span class="time">march 18 - april 18</span>
-				<span class="toolstack">| toolstack:</span> ruby, jekyll, sass, html
+				<span class="time">Project time date</span>
+				<span class="toolstack">| toolstack:</span> tools used
 			</div>
-			<div class="description"><p>You are here! Thank you for checking my project page</p>
-</div>
 
-				<div class="links"
+			<div class="description">
+                <p>
+                    Text goes here....
+                </p>
+            </div>
 
-						id="links_3"
-					>
+			<div class="links"id="links_3">
 
-						<div class="website">
-							<a href="http://www.georgemihaila.com">view online</a>
-						</div
-					><div class="github">
-						<a href="https://github.com/mihaidobri/mihaidobri.github.io">view on GitHub</a>
-					</div
-					><div class="download">
-						<a href="https://github.com/mihaidobri/mihaidobri.github.io/archive/master.zip">download zip</a>
-					</div>
+                <div class="website">
+					<a href="http://www.georgemihaila.com">view online</a>
 				</div>
 
-		</div>
+                <div class="github">
+					<a href="https://github.com/mihaidobri/mihaidobri.github.io">view on GitHub</a>
+				</div>
 
-</div>
+                <div class="download">
+                    <a href="https://github.com/mihaidobri/mihaidobri.github.io/archive/master.zip">download zip</a>
+				</div>
 
-		</div>
+            </div>
+
+
+        </div>
+
+    </div>
+
+	</div>
 
 	</body>
 </html>
