--- a/projects/index.html
+++ b/projects/index.html
@@ -87,7 +87,7 @@
 
 			<div class="meta">
 				<span class="time">Project time date</span>
-				<span class="toolstack">| toolstack:</span> tools used
+				<span class="toolstack">| toolstack:</span> tools, used
 			</div>
 
 			<div class="description">
@@ -115,9 +115,9 @@
 
         </div>
 
-    </div>
+</div>
 
-	</div>
+    	</div>
 
 	</body>
 </html>
