--- a/projects/index.html
+++ b/projects/index.html
@@ -70,54 +70,40 @@
 	</ul>
     </div>
 
-
-	<div id="projects">
-
+<div id="projects">
 
 		<div class="project">
-			<h1>
-                Project Title
-            </h1>
-
+			<h1>Personal website</h1>
 			<span class="separator">|</span>
-
-            <span>
-                Project short description
-            </span>
-
+			<span>personal website / portfolio / blog</span>
 			<div class="meta">
-				<span class="time">Project time date</span>
-				<span class="toolstack">| toolstack:</span> tools, used
+				<span class="time">march 18 - april 18</span>
+				<span class="toolstack">| toolstack:</span> ruby, jekyll, sass, html
 			</div>
+			<div class="description"><p>You are here! Thank you for checking my project page</p>
+</div>
 
-			<div class="description">
-                <p>
-                    Text goes here....
-                </p>
-            </div>
+				<div class="links"
 
-			<div class="links"id="links_3">
+						id="links_3"
+					>
 
-                <div class="website">
-					<a href="http://www.georgemihaila.com">view online</a>
+						<div class="website">
+							<a href="http://www.mihaidobri.com">view online</a>
+						</div
+					><div class="github">
+						<a href="https://github.com/mihaidobri/mihaidobri.github.io">view on GitHub</a>
+					</div
+					><div class="download">
+						<a href="https://github.com/mihaidobri/mihaidobri.github.io/archive/master.zip">download zip</a>
+					</div>
 				</div>
 
-                <div class="github">
-					<a href="https://github.com/mihaidobri/mihaidobri.github.io">view on GitHub</a>
-				</div>
-
-                <div class="download">
-                    <a href="https://github.com/mihaidobri/mihaidobri.github.io/archive/master.zip">download zip</a>
-				</div>
-
-            </div>
-
-
-        </div>
+		</div>
 
 </div>
 
-    	</div>
+		</div>
 
 	</body>
 </html>
