--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<div id="main">
 
 				<div id="header">
-	<h2 id="maintitle">GeorgeM</h2>
+	<h2 id="maintitle"></h2>
 	<ul>
 		<li id="about"><a href="/">about</a></li>
 		<li id="projects"><a href="/projects">projects</a></li>
