--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<div id="main">
 
 				<div id="header">
-	<h2 id="maintitle">" "</h2>
+	<h2 id="maintitle">George Mihaila</h2>
 	<ul>
 		<li id="about"><a href="/">about</a></li>
 		<li id="projects"><a href="/projects">projects</a></li>
@@ -78,15 +78,17 @@
 	><div id="middle">
 	</div
 	><div id="right">
-		<h2>George Mihaila</h2>
+		<h2>Machine Learning - AI Practitioner</h2>
 
         <p>
-            Machine Learning - AI Practitioner
+            PhD. Computer Science Student at University of North Texas
         </p>
-        <p>
-            PhD. Computer Science at University of North Texas
-		</p>
 
+        <p>
+            Current position:
+                Data Scientist Enterprise & Data Analytics
+                State Farm, Bloomington, IL
+        </p>
 
 		<p>
             Latest Activity:
