--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<div id="main">
 
 				<div id="header">
-	<h2 id="maintitle">George Mihaila</h2>
+	<h1 id="maintitle">George Mihaila</h1>
 	<ul>
 		<li id="about"><a href="/">about</a></li>
 		<li id="projects"><a href="/projects">projects</a></li>
@@ -78,7 +78,7 @@
 	><div id="middle">
 	</div
 	><div id="right">
-		<h2>Machine Learning - AI Practitioner</h2>
+		<h2>Machine Learning - AI</h2>
 
         <p>
             PhD. Computer Science Student at University of North Texas
