--- a/index.html
+++ b/index.html
@@ -80,29 +80,19 @@
 	><div id="right">
 		<h2>Machine Learning - AI</h2>
 
-        <p>
-            PhD. Computer Science Student at University of North Texas
-        </p>
+        <p>PhD. Computer Science Student at University of North Texas</p>
 
-        <p>
-            Current position:
-                Data Scientist Enterprise & Data Analytics
-                State Farm, Bloomington, IL
-        </p>
+        <p>Current position:</p>
+        <p> Data Scientist Enterprise - Data Analytics</p>
+        <p>State Farm, Bloomington, IL</p>
 
-		<p>
-            Latest Activity:
-		</p>
+		<p>Latest Activity:</p>
 
 
-		<p>
-            Latest Project:
-		</p>
+		<p>Latest Project:</p>
 
 
-		<p>
-            Current book reading:
-		</p>
+		<p>Current book reading:</p>
 
         <p>
 
