--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         </p>
 
 		<div id="links">
+			<div><a id="website" href="https://github.com/gmihaila"></a></div>
 			<div><a id="github" href="https://github.com/gmihaila"></a></div>
 			<div><a id="linkedin" href="http://www.linkedin.com/in/georgemihaila"></a></div>
 		</div>
