--- a/index.html
+++ b/index.html
@@ -102,12 +102,23 @@
 
         </p>
 
-		<div id="links">
-			<div><a id="website" href="https://github.com/gmihaila"></a></div>
-			<div><a id="github" href="https://github.com/gmihaila"></a></div>
-			<div><a id="linkedin" href="http://www.linkedin.com/in/georgemihaila"></a></div>
-		</div>
-	</div>
+<div class="links"
+
+						id="links_3"
+					>
+
+						<div class="website">
+							<a href="http://www.mihaidobri.com">view online</a>
+						</div
+					><div class="github">
+						<a href="https://github.com/mihaidobri/mihaidobri.github.io">view on GitHub</a>
+					</div
+					><div class="download">
+						<a href="https://github.com/mihaidobri/mihaidobri.github.io/archive/master.zip">download zip</a>
+					</div>
+				</div>
+
+    </div>
 </div>
 
 		</div>
