--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
         </p>
 
-		<div id="links_3">
+		<div id="links">
 			<div><a id="website" href="https://github.com/gmihaila"></a></div>
 			<div><a id="github" href="https://github.com/gmihaila"></a></div>
 			<div><a id="linkedin" href="http://www.linkedin.com/in/georgemihaila"></a></div>
