--- a/index.html
+++ b/index.html
@@ -19,26 +19,14 @@
 
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet" type="text/css">
-
 		<!-- Page-specific stylesheets.  -->
-
-			<link rel="stylesheet" type="text/css" href="/css/about.css">
-
-
-			<link rel="stylesheet" type="text/css" href="/css/header.css">
-
-
-
+		<link rel="stylesheet" type="text/css" href="/css/about.css">
+		<link rel="stylesheet" type="text/css" href="/css/header.css">
 		<!-- MathJax configuration. -->
-
-
-
-
 		<!-- Bill. -->
 		<script>
 			console.log("_   /|\n\\'o.O'\n=(___)=\n   U\n\nHey there.");
 		</script>
-
 		<!-- Google Analytics. -->
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -58,59 +46,50 @@
 		<![endif]-->
 
 		<div id="main">
+			<div id="header">
+					<h2 id="maintitle"></h2>
+					<ul>
+						<li id="about"><a href="/">about</a></li>
+						<li id="projects"><a href="/projects">projects</a></li>
+						<li id="blog"><a href="/blog">blog</a></li>
+						<li id="cv"><a href="/cv/CV.pdf">cv</a></li>
+						<li id="contact"><a href="mailto:georgemihaila@my.unt.edu.com">contact</a></li>
+					</ul>
+				</div>
 
-				<div id="header">
-	<h2 id="maintitle">George Mihaila</h2>
-	<ul>
-		<li id="about"><a href="/">about</a></li>
-		<li id="projects"><a href="/projects">projects</a></li>
-		<li id="blog"><a href="/blog">blog</a></li>
-		<li id="cv"><a href="/cv/CV.pdf">cv</a></li>
-		<li id="contact"><a href="mailto:georgemihaila20@yahoo.com">contact</a></li>
-	</ul>
-</div>
+				<div id="about">
+
+					<div id="left">
+						<img src="" alt="George Mihaila's photo">
+
+						</div>
+
+						<div id="middle">
+							<div id="links">
+							<div><a id="stackoverflow" href="https://medium.com"></a></div>
+							<div><a id="github" href="https://github.com/gmihaila"></a></div>
+							<div><a id="linkedin" href="http://www.linkedin.com/in/georgemihaila"></a></div>
+							</div>
+						</div>
+
+						<div id="right">
+							<h2>George Mihaila</h2>
+							<p>Machine Learning - AI</p>
+							<p>PhD. Computer Science Student at University of North Texas</p>
+							<p>Current position:</p>
+							<p> Data Scientist Enterprise - Data Analytics</p>
+							<p>State Farm, Bloomington, IL</p>
+							<p>Latest Activity:</p>
+							<p>Latest Project:</p>
+							<p>Current book reading:</p>
 
 
-			<div id="about">
-	<div id="left">
-		<img src="" alt="George Mihaila's photo">
-	</div
-	><div id="middle">
-	</div
-	><div id="right">
-		<h3>Machine Learning - AI</h3>
 
-        <p>PhD. Computer Science Student at University of North Texas</p>
+						</div>
 
-        <p>Current position:</p>
-        <p> Data Scientist Enterprise - Data Analytics</p>
-        <p>State Farm, Bloomington, IL</p>
+					</div>
 
-		<p>Latest Activity:</p>
+				</div>
 
-
-		<p>Latest Project:</p>
-
-
-		<p>Current book reading:</p>
-
-        <p>
-
-        </p>
-
-        <p>
-
-        </p>
-
-		<div id="links">
-			<div><a id="stackoverflow" href="https://github.com/gmihaila"></a></div>
-			<div><a id="github" href="https://github.com/gmihaila"></a></div>
-			<div><a id="linkedin" href="http://www.linkedin.com/in/georgemihaila"></a></div>
-		</div>
-	</div>
-</div>
-
-		</div>
-
-	</body>
+			</body>
 </html>
