--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 						</div>
 
 						<div id="middle">
-							<div id="links">
+							<div id="links3">
 							<div><a id="stackoverflow" href="https://medium.com"></a></div>
 							<div><a id="github" href="https://github.com/gmihaila"></a></div>
 							<div><a id="linkedin" href="http://www.linkedin.com/in/georgemihaila"></a></div>
