--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				<div id="about">
 
 					<div id="left">
-						<img src="" alt="George Mihaila's photo">
+						<img src="https://github.com/gmihaila/gmihaila.github.io/blob/master/profile_image/georgem.jpeg?raw=true" alt="George Mihaila's photo">
 
 						</div>
 
