--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							<p>State Farm, Bloomington, IL</p>
 							<p>Latest Activity:</p>
 							<p>Latest Project:</p>
-							<p>Current book reading:</p>
+							<p>Current book reading:1</p>
 						</div>
 
 						<div id="middle">
