--- a/projects/index.html
+++ b/projects/index.html
@@ -17,15 +17,15 @@
 			}
 		</style>
 
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet" type="text/css">
 
 		<!-- Page-specific stylesheets.  -->
 
-			<link rel="stylesheet" type="text/css" href="/css/projects.css">
+			<link rel="stylesheet" type="text/css" href="css/projects.css">
 
 
-			<link rel="stylesheet" type="text/css" href="/css/header.css">
+			<link rel="stylesheet" type="text/css" href="css/header.css">
 
 
 
