--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 			}
 		</style>
 
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet" type="text/css">
 		<!-- Page-specific stylesheets.  -->
-		<link rel="stylesheet" type="text/css" href="/css/about.css">
-		<link rel="stylesheet" type="text/css" href="/css/header.css">
+		<link rel="stylesheet" type="text/css" href="css/about.css">
+		<link rel="stylesheet" type="text/css" href="css/header.css">
 		<!-- MathJax configuration. -->
 		<!-- Bill. -->
 		<script>
@@ -89,7 +89,7 @@
 						<div id="middle">
 
 							</div>
-							
+
 					</div>
 
 				</div>
