--- a/projects/index.html
+++ b/projects/index.html
@@ -66,7 +66,7 @@
 		<li id="projects"><a href="/projects">projects</a></li>
 		<li id="blog"><a href="/blog">blog</a></li>
 		<li id="cv"><a href="/cv/CV.pdf">cv</a></li>
-		<li id="contact"><a href="mailto:georgemihaila20@yahoo.com">contact</a></li>
+		<!-- <li id="contact"><a href="mailto:georgemihaila20@yahoo.com">contact</a></li> -->
 	</ul>
     </div>
 
