--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 			<div id="header">
 					<h2 id="maintitle"></h2>
 					<ul>
-						<li id="about"><a href="/">about</a></li>
-						<li id="projects"><a href="/projects">projects</a></li>
-						<li id="blog"><a href="/blog">blog</a></li>
-						<li id="cv"><a href="/cv/CV.pdf">cv</a></li>
-						<li id="contact"><a href="mailto:georgemihaila@my.unt.edu.com">contact</a></li>
+						<li id="about"><a href="">about</a></li>
+						<li id="projects"><a href="projects/index.html">projects</a></li>
+						<li id="blog"><a href="blog/index.html">blog</a></li>
+						<li id="cv"><a href="cv/CV.pdf">cv</a></li>
+						<!-- <li id="contact"><a href="mailto:georgemihaila@my.unt.edu.com">contact</a></li> -->
 					</ul>
 				</div>
 
