--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 						<img src="https://github.com/gmihaila/gmihaila.github.io/blob/master/profile_image/georgem.jpeg?raw=true" alt="George Mihaila's photo">
 
 						<div id="links">
+						<div><a id="website" href="https://medium.com/@georgemihaila20/"></a></div>
 						<div><a id="stackoverflow" href="https://medium.com/@georgemihaila20/"></a></div>
 						<div><a id="github" href="https://github.com/gmihaila"></a></div>
 						<div><a id="linkedin" href="https://www.LinkedIn.com/in/mihailageorge"></a></div>
