--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 			}
 		</style>
 
+		<!-- Add icon library -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet" type="text/css">
 		<!-- Page-specific stylesheets.  -->
@@ -62,13 +65,14 @@
 					<div id="left">
 						<img src="https://github.com/gmihaila/gmihaila.github.io/blob/master/profile_image/georgem.jpeg?raw=true" alt="George Mihaila's photo">
 
-						<div id="links">
-						<div><a id="website" href="https://medium.com/@georgemihaila20/"></a></div>
+						<a href="#" class="fa fa-envelope"> GeorgeMihaila@my.unt.edu</a>
+						<!-- <div id="links">
 						<div><a id="stackoverflow" href="https://medium.com/@georgemihaila20/"></a></div>
 						<div><a id="github" href="https://github.com/gmihaila"></a></div>
 						<div><a id="linkedin" href="https://www.LinkedIn.com/in/mihailageorge"></a></div>
 
-						</div>
+
+						</div> -->
 
 						</div>
 
@@ -88,6 +92,10 @@
 
 
 						<div id="middle">
+							<a href="#" class="fa fa-twitter"></a>
+							<a href="#" class="fa fa-linkedin-square"></a>
+							<a href="#" class="fa fa-github-square"></a>
+							<a href="#" class="fa fa-medium"></a>
 
 							</div>
 
