--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
 					<div id="left">
 						<img src="https://github.com/gmihaila/gmihaila.github.io/blob/master/profile_image/georgem.jpeg?raw=true" alt="George Mihaila's photo">
 
-						<a href="#" class="fa fa-envelope"> GeorgeMihaila@my.unt.edu</a>
 						<!-- <div id="links">
 						<div><a id="stackoverflow" href="https://medium.com/@georgemihaila20/"></a></div>
 						<div><a id="github" href="https://github.com/gmihaila"></a></div>
@@ -92,10 +91,11 @@
 
 
 						<div id="middle">
-							<a href="#" class="fa fa-twitter"></a>
-							<a href="#" class="fa fa-linkedin-square"></a>
-							<a href="#" class="fa fa-github-square"></a>
-							<a href="#" class="fa fa-medium"></a>
+							<a href="https://twitter.com/georgemihaila20" class="fa fa-twitter"></a>
+							<a href="https://www.LinkedIn.com/in/mihailageorge" class="fa fa-linkedin-square"></a>
+							<a href="https://github.com/gmihaila" class="fa fa-github-square"></a>
+							<a href="https://medium.com/@georgemihaila20" class="fa fa-medium"></a>
+							<a href="mailto:georgemihaila@my.unt.edu.com" class="fa fa-envelope"></a>
 
 							</div>
 
