--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						<div id="middle">
 							<a href="https://twitter.com/georgemihaila20" class="fa fa-twitter"></a>
 							<a href="https://www.LinkedIn.com/in/mihailageorge" class="fa fa-linkedin-square"></a>
-							<a href="https://github.com/gmihaila" class="fa fa-github-square"></a>
+							<a href="https://github.com/gmihaila" class="fa fa-github"></a>
 							<a href="https://medium.com/@georgemihaila20" class="fa fa-medium"></a>
 							<a href="mailto:georgemihaila@my.unt.edu.com" class="fa fa-envelope"></a>
 
