--- a/index.html
+++ b/index.html
@@ -76,16 +76,21 @@
 						</div>
 
 						<div id="right">
-							<h2>George Mihaila</h2>
+							<h1>George Mihaila</h1>
 							<p>Machine Learning - AI</p>
-							<p>PhD. Computer Science Student at University of North Texas</p>
-							<p>Current position:</p>
+							<p>PhD. Computer Science</p>
+							<p>University of North Texas</p>
+							<p></p>
+							<h3>Current position:</h3>
 							<p> Data Scientist Enterprise - Data Analytics</p>
 							<p>State Farm, Bloomington, IL</p>
-							<p>Latest Activity:</p>
-							<p>Latest Project:</p>
-							<p>Current book reading:12</p>
-
+							<h3>Latest Activity:</h3>
+							<p>Won anual HackDay State Farm competition.</p>
+							<h3>Latest Project:</h3>
+							<p> </p>
+							<h3>Current book reading:</h3>
+							<a href="https://www.amazon.com/Signal-Noise-Many-Predictions-Fail-but/dp/0143125087">The Signal and the Noise by Nate Silver</a>
+							<p> </p>
 
 						</div>
 
