--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
 		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet" type="text/css">
 		<!-- Page-specific stylesheets.  -->
 		<link rel="stylesheet" type="text/css" href="css/about.css">
+		<link rel="stylesheet" type="text/css" href="/css/activities.css">
 		<link rel="stylesheet" type="text/css" href="css/header.css">
-		<!-- MathJax configuration. -->
-		<!-- Bill. -->
 		<script>
 			console.log("_   /|\n\\'o.O'\n=(___)=\n   U\n\nHey there.");
 		</script>
@@ -40,46 +39,86 @@
 			ga('send', 'pageview');
 		</script>
 	</head>
-	<body>
-		<!--[if lt IE 7]>
-			<p>
-				You are using an <strong>outdated</strong> browser. Please
-				<a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
-			</p>
-		<![endif]-->
 
+	<body>
 		<div id="main">
 			<div id="header">
 					<h2 id="maintitle"></h2>
 					<ul>
 						<li id="about"><a href="">about</a></li>
-						<li id="projects"><a href="projects/index.html">projects</a></li>
-						<li id="blog"><a href="blog/index.html">blog</a></li>
+						<li id="activity"><a href="activities/activities.html">activity</a></li>
+						<li id="projects"><a href="projects/projects.html">projects</a></li>
 						<li id="cv"><a href="cv/CV.pdf">cv</a></li>
-						<!-- <li id="contact"><a href="mailto:georgemihaila@my.unt.edu.com">contact</a></li> -->
 					</ul>
 				</div>
 
+
 				<div id="about">
 
-					<div id="left">
-						<img src="https://github.com/gmihaila/gmihaila.github.io/blob/master/profile_image/georgem.jpeg?raw=true" alt="George Mihaila's photo">
+					<div id="middle">
+						<div id="left">
+							<img src="https://github.com/gmihaila/gmihaila.github.io/blob/master/profile_image/georgem.jpeg?raw=true" alt="George Mihaila's photo">
+							<!-- <div id="links">
+							<div><a id="stackoverflow" href="https://medium.com/@georgemihaila20/"></a></div>
+							<div><a id="github" href="https://github.com/gmihaila"></a></div>
+							<div><a id="linkedin" href="https://www.LinkedIn.com/in/mihailageorge"></a></div>
+							</div> -->
+							</div>
 
-						<!-- <div id="links">
-						<div><a id="stackoverflow" href="https://medium.com/@georgemihaila20/"></a></div>
-						<div><a id="github" href="https://github.com/gmihaila"></a></div>
-						<div><a id="linkedin" href="https://www.LinkedIn.com/in/mihailageorge"></a></div>
+							<div id="right">
+									<h1>George Mihaila</h1>
+									<p>Machine Learning - AI</p>
+									<p>PhD. Computer Science</p>
+									<p>University of North Texas</p>
+								</div>
 
-
-						</div> -->
 
 						</div>
 
-						<div id="right">
-							<h1>George Mihaila</h1>
-							<p>Machine Learning - AI</p>
-							<p>PhD. Computer Science</p>
-							<p>University of North Texas</p>
+					</div>
+
+
+
+					<div id="middle">
+					<div class="text">
+						<h3 class="blog-title">Current position:</h3>
+					</div>
+					<div class="excerpt">
+						<p> Data Scientist Enterprise - Data Analytics</p>
+						<p>State Farm, Bloomington, IL</p>
+					</div>
+
+					<div class="text">
+						<h3 class="blog-title">Latest Activity:</h3>
+					</div>
+					<div class="excerpt">
+						<p>Won anual HackDay State Farm competition.</p>
+					</div>
+
+					<div class="text">
+						<h3 class="blog-title">Current book reading:</h3>
+					</div>
+					<div class="excerpt">
+						<a href="https://www.amazon.com/Signal-Noise-Many-Predictions-Fail-but/dp/0143125087">The Signal and the Noise by Nate Silver</a>
+						<p> </p>
+					</div>
+				</div>
+
+
+
+				<div id="middle">
+					<a href="https://twitter.com/georgemihaila20" class="fa fa-twitter"></a>
+					<a href="https://www.LinkedIn.com/in/mihailageorge" class="fa fa-linkedin-square"></a>
+					<a href="https://github.com/gmihaila" class="fa fa-github"></a>
+					<a href="https://medium.com/@georgemihaila20" class="fa fa-medium"></a>
+					<a href="mailto:georgemihaila@my.unt.edu.com" class="fa fa-envelope"></a>
+					</div>
+
+
+				<!-- <div id="about">
+<div id="middle">
+					<div id="left">
+
 							<p></p>
 							<h3>Current position:</h3>
 							<p> Data Scientist Enterprise - Data Analytics</p>
@@ -95,16 +134,17 @@
 						</div>
 
 
-						<div id="middle">
-							<a href="https://twitter.com/georgemihaila20" class="fa fa-twitter"></a>
-							<a href="https://www.LinkedIn.com/in/mihailageorge" class="fa fa-linkedin-square"></a>
-							<a href="https://github.com/gmihaila" class="fa fa-github"></a>
-							<a href="https://medium.com/@georgemihaila20" class="fa fa-medium"></a>
-							<a href="mailto:georgemihaila@my.unt.edu.com" class="fa fa-envelope"></a>
 
-							</div>
 
-					</div>
+						<!-- </div>
+					</div> -->
+
+
+
+
+
+
+
 
 				</div>
 
