--- a/activities/activities.html
+++ b/activities/activities.html
@@ -47,7 +47,7 @@
 						<li id="about"><a href="../index.html">about</a></li>
 						<li id="activity"><a href="">activity</a></li>
 						<li id="projects"><a href="../projects/projects.html">projects</a></li>
-						<li id="cv"><a href="../cv/CV.pdf">cv</a></li>
+						<li id="cv"><a href="../cv/cv.html">cv</a></li>
 					</ul>
 				</div>
 
@@ -75,7 +75,7 @@
           <!-- Post Content -->
           <div class="excerpt">
             <!-- Write Post Content Here -->
-
+						Content is here
           </div>
         </li>
         <!-- End Post -->
