--- a/index.html
+++ b/index.html
@@ -48,13 +48,12 @@
 						<li id="about"><a href="">about</a></li>
 						<li id="activity"><a href="activities/activities.html">activity</a></li>
 						<li id="projects"><a href="projects/projects.html">projects</a></li>
-						<li id="cv"><a href="cv/CV.pdf">cv</a></li>
+						<li id="cv"><a href="cv/cv.html">cv</a></li>
 					</ul>
 				</div>
 
 
 				<div id="about">
-
 					<div id="middle">
 						<div id="left">
 							<img src="https://github.com/gmihaila/gmihaila.github.io/blob/master/profile_image/georgem.jpeg?raw=true" alt="George Mihaila's photo">
@@ -63,90 +62,48 @@
 							<div><a id="github" href="https://github.com/gmihaila"></a></div>
 							<div><a id="linkedin" href="https://www.LinkedIn.com/in/mihailageorge"></a></div>
 							</div> -->
-							</div>
-
-							<div id="right">
-									<h1>George Mihaila</h1>
-									<p>Machine Learning - AI</p>
-									<p>PhD. Computer Science</p>
-									<p>University of North Texas</p>
-								</div>
-
-
 						</div>
+
+						<div id="right">
+								<h1>George Mihaila</h1>
+								<p>Machine Learning - AI</p>
+								<p>PhD. Computer Science</p>
+								<p>University of North Texas</p>
+						</div>
+					</div>
+				</div>
+
+				<div id="about">
+					<div id="right">
+						<h3 class="blog-title">Current position:</h3>
+						<p> Data Scientist Enterprise - Data Analytics </br>
+						State Farm, Bloomington, IL</p>
+
+						<h3 class="blog-title">Latest Activity:</h3>
+						<p>Won the 2018 HackDay State Farm competition &ensp;
+						<a href="https://github.com/gmihaila/StateFarm_HackDay" class="fa fa-git"></a></p>
+
+						<h3 class="blog-title">Current book reading:</h3>
+						<p>The Signal and the Noise by Nate Silver &ensp;
+						<a href="https://www.amazon.com/Signal-Noise-Many-Predictions-Fail-but/dp/0143125087" class="fa fa-amazon"></a></p>
 
 					</div>
 
+				</div>
 
+
+				<div id="about">
 
 					<div id="middle">
-					<div class="text">
-						<h3 class="blog-title">Current position:</h3>
-					</div>
-					<div class="excerpt">
-						<p> Data Scientist Enterprise - Data Analytics</p>
-						<p>State Farm, Bloomington, IL</p>
-					</div>
-
-					<div class="text">
-						<h3 class="blog-title">Latest Activity:</h3>
-					</div>
-					<div class="excerpt">
-						<p>Won anual HackDay State Farm competition.</p>
-					</div>
-
-					<div class="text">
-						<h3 class="blog-title">Current book reading:</h3>
-					</div>
-					<div class="excerpt">
-						<a href="https://www.amazon.com/Signal-Noise-Many-Predictions-Fail-but/dp/0143125087">The Signal and the Noise by Nate Silver</a>
-						<p> </p>
+						<a href="https://twitter.com/georgemihaila20" class="fa fa-twitter"></a>
+						<a href="https://www.LinkedIn.com/in/mihailageorge" class="fa fa-linkedin-square"></a>
+						<a href="https://github.com/gmihaila" class="fa fa-github"></a>
+						<a href="https://medium.com/@georgemihaila20" class="fa fa-medium"></a>
+						<a href="mailto:georgemihaila@my.unt.edu.com" class="fa fa-envelope"></a>
 					</div>
 				</div>
 
 
-
-				<div id="middle">
-					<a href="https://twitter.com/georgemihaila20" class="fa fa-twitter"></a>
-					<a href="https://www.LinkedIn.com/in/mihailageorge" class="fa fa-linkedin-square"></a>
-					<a href="https://github.com/gmihaila" class="fa fa-github"></a>
-					<a href="https://medium.com/@georgemihaila20" class="fa fa-medium"></a>
-					<a href="mailto:georgemihaila@my.unt.edu.com" class="fa fa-envelope"></a>
-					</div>
-
-
-				<!-- <div id="about">
-<div id="middle">
-					<div id="left">
-
-							<p></p>
-							<h3>Current position:</h3>
-							<p> Data Scientist Enterprise - Data Analytics</p>
-							<p>State Farm, Bloomington, IL</p>
-							<h3>Latest Activity:</h3>
-							<p>Won anual HackDay State Farm competition.</p>
-							<h3>Latest Project:</h3>
-							<p> </p>
-							<h3>Current book reading:</h3>
-							<a href="https://www.amazon.com/Signal-Noise-Many-Predictions-Fail-but/dp/0143125087">The Signal and the Noise by Nate Silver</a>
-							<p> </p>
-
-						</div>
-
-
-
-
-						<!-- </div>
-					</div> -->
-
-
-
-
-
-
-
-
-				</div>
-
-			</body>
+			</div>
+		</body>
 </html>
