--- a/projects/projects.html
+++ b/projects/projects.html
@@ -47,7 +47,7 @@
 						<li id="about"><a href="../index.html">about</a></li>
 						<li id="activity"><a href="../activities/activities.html">activity</a></li>
 						<li id="projects"><a href="">projects</a></li>
-						<li id="cv"><a href="../cv/CV.pdf">cv</a></li>
+						<li id="cv"><a href="../cv/cv.html">cv</a></li>
 					</ul>
 				</div>
 
