--- a/activities/activities.html
+++ b/activities/activities.html
@@ -60,9 +60,9 @@
 
             <div class="text">
               <!-- Post Title -->
-              <a class="blog-title" href="">Required Reading For the Absolute Beginner</a>
+              <a class="blog-title" href="">Under Construction</a>
               <!-- Post Date -->
-              <span class="date">22 Mar 2018</span>
+              <span class="date">date</span>
               <!-- Post Tags -->
               <div class="tags">
                 <span>tags:</span>
