--- a/cv/cv.html
+++ b/cv/cv.html
@@ -66,11 +66,10 @@
 
             </div>
 
-            <div class="summary">
+            <div class="summary"></br>
               &ensp;&ensp;&ensp;My main interests are: Machine Learning, Natural Language Processing, Computer Vision
               &ensp;&ensp;&ensp;and Reinforcement Learning. </br>
               &ensp;&ensp;&ensp;I love working with Depp Learning and Big Data. </br>
-              &ensp;&ensp;&ensp;My previous background in engineering helps boost my creativity and innovation.
             </div>
           </div>
           <!-- Post Content -->
@@ -87,22 +86,50 @@
               <!-- Post Title -->
               <a class="blog-title" href="">Experience:</a>
               <!-- Post Date -->
-              <span class="date">22 Mar 2018</span>
-              <!-- Post Tags -->
+              <span class="date"></span>
+
+              <!-- Blank -->
               <div class="tags">
-                <span>tags:</span>
-                <a href="/blog/tags#testing">testing</a>
+                <a href=""></a></br>
               </div>
+
+							<!-- Date -->
+							<span class="date">September 2018</span>
+							<!-- Position -->
+              <div class="tags">
+                <a href="">Data Science & Machine Leanring</a></br>
+								<a href="">University of North Texas - High Performance Computing</a>
+              </div>
+							<div class="excerpt">
+		            <!-- Write Post Content Here -->
+		            ●  Offer Data Science – Machine Learning support for different departments.</br>
+								●  Server maintenance, IT support for UNT High Performance Computing.</br>
+								●  Working on future development of container technology.</br>
+		          </div></br>
+
+							<!-- Date -->
+							<span class="date">May 2018 – August 2018</span>
+							<!-- Position -->
+              <div class="tags">
+                <a href="">Data Science & Machine Leanring</a></br>
+								<a href="">State Farm - Enterprise & Data Analytics</a>
+              </div>
+							<div class="excerpt">
+		            <!-- Write Post Content Here -->
+								● Worked on Machine Learning Platform, using Docker Swarm.</br>
+								● Improved deep learning text models that saves State Farm millions $ / year.</br>
+								● Won the annual Hack Day with project involving machine learning, big data pipeline architecture,
+								chatbot, OCR, fraud detection with savings of $5 mil/year. </br>
+								● Developed deep learning model from scratch to perform OCR on scanned documents. </br>
+								Achieved over 75% accuracy with a state of the art training technique.</br>
+		          </div>
+
             </div>
 
             <div class="summary"></div>
           </div>
-          <!-- Post Content -->
-          <div class="excerpt">
-            <!-- Write Post Content Here -->
-            Content is here
-          </div>
         </li>
+
         <!-- End Post -->
 
         <!-- Start Post -->
