--- a/index.html
+++ b/index.html
@@ -76,12 +76,13 @@
 				<div id="about">
 					<div id="right">
 						<h3 class="blog-title">Current position:</h3>
-						<p> Data Scientist Enterprise - Data Analytics </br>
-						State Farm, Bloomington, IL</p>
+						<p> Machine Learning - Data Science </br>
+						University of North Texas (UNT) - High Performance Computing</p>
+
 
 						<h3 class="blog-title">Latest Activity:</h3>
-						<p>Won the 2018 HackDay State Farm competition &ensp;
-						<a href="https://github.com/gmihaila/StateFarm_HackDay" class="fa fa-git"></a></p>
+						<p>Elected Vice President ACM - UNT branch &ensp;
+						<a href="https://unt.campuslabs.com/engage/organization/association-for-computing-machinery" class="fa fa-shield fa-rotate-180"></a></p>
 
 						<h3 class="blog-title">Current book reading:</h3>
 						<p>The Signal and the Noise by Nate Silver &ensp;
