--- a/projects/project_template.html
+++ b/projects/project_template.html
@@ -26,3 +26,20 @@
   </div>
 </div>
 <!-- End Project -->
+
+
+<!-- Project Links -->
+<div class="links"id="links_3">
+  <div class="website">
+    <a href="https://github.com/gmihaila/">view online</a>
+  </div
+  ><div class="github">
+  <a href="https://github.com/gmihaila/">view on GitHub</a>
+  </div
+  ><div class="download">
+  <a href="https://github.com/gmihaila/archive/master.zip">download zip</a>
+  </div>
+  </div>
+  </div>
+</div>
+<!-- End Project -->
