--- a/projects/projects.html
+++ b/projects/projects.html
@@ -59,28 +59,29 @@
 
 
           <!-- Start Project -->
-          <h1>Personal website</h1>
+          <h1>Talon Workshop</h1>
           <span class="separator">|</span>
-          <span>personal website / portfolio / blog</span>
+          <span>Machine Learning - Neural Networks</span>
           <div class="meta">
-            <span class="time">march 18 - april 18</span>
-            <span class="toolstack">| toolstack:</span> ruby, jekyll, sass, html
+            <span class="time">november 30, 2018</span>
+            <span class="toolstack">|University of North Texas </span>GAB 535
           </div>
 
           <div class="description">
-            <p>You are here! Thank you for checking my project page</p>
+						<p></p>
+            <p>What are Neural Networks, and why everyone is talking about them?</p>
+							<p>This workshop is meant to give a general overview of why Neural Networks and Deep
+							Learning are getting so much attention and help shed some light on how they work and what
+							applications are possible because of them.</p>
           </div>
 
           <!-- Project Links -->
           <div class="links"id="links_3">
             <div class="website">
-              <a href="https://github.com/gmihaila/">view online</a>
+              <a href="deep_learning_workshop.html">view presentation</a>
             </div
             ><div class="github">
-            <a href="https://github.com/gmihaila/">view on GitHub</a>
-            </div
-            ><div class="download">
-            <a href="https://github.com/gmihaila/archive/master.zip">download zip</a>
+            <a href="https://github.com/gmihaila/unt_hpc">Talon on GitHub</a>
             </div>
             </div>
             </div>
