--- a/cv/cv.html
+++ b/cv/cv.html
@@ -69,7 +69,7 @@
             <div class="summary"></br>
               &ensp;&ensp;&ensp;My main interests are: Machine Learning, Natural Language Processing, Computer Vision
               &ensp;&ensp;&ensp;and Reinforcement Learning. </br>
-              &ensp;&ensp;&ensp;I love working with Depp Learning and Big Data. </br>
+              &ensp;&ensp;&ensp;I love working with Deep Learning and Big Data. </br>
             </div>
           </div>
           <!-- Post Content -->
